--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,5 @@ frontend/node_modules/.cache/default-development/20.pack
 frontend/node_modules/.cache/default-development/3.pack
 
 .vercel
+frontend/node_modules/.cache/default-development/2.pack
+frontend/node_modules/.cache/default-development/9.pack
